snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.jar.sha512
4c773374205ba92aa79cef18d4697351e1b0f400f142d3d698e4c8d150ecb5c92c062a103530c08e4633d0ca74ac3332e7183b4783ed4f20805f716b307f7b46